prevent page from shifting when hovering

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -88,6 +88,7 @@
   i {
     display: none
   }
+  border: 1px solid transparent;
   &:hover, &.active {
     border: 1px solid #5ABCD6;
     background: #D6EEF5;
